argocd/signal/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: signal-cli
  name: signal-cli
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: signal-cli
