argocd/signal/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signal
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - signal.yanello.net
  rules:
    - backendRefs:
        - name: signal-cli
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
